k8s-kustomize/platform/monitoring/overlays/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

# 기본 설정
metadata:
  name: grafana
  namespace: monitoring

# 스펙
spec:
  parentRefs:
    - name: pinhouse-gateway
      namespace: nginx-gateway

  # 도메인 명
  hostnames:
    - "grafana.pinhouse.co.kr"

  # 참조 규칙
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monitoring-core-grafana
          port: 80
